[gd_scene load_steps=9 format=3 uid="uid://f1j28se2th8x"]

[ext_resource type="Theme" uid="uid://b0tjjt5pm8kcv" path="res://assets/themes/notification_theme.tres" id="1_8ldpm"]
[ext_resource type="Script" uid="uid://byf3px50tjoqd" path="res://scripts/notification.gd" id="2_8ldpm"]
[ext_resource type="Texture2D" uid="uid://dptxvrd0xlaxa" path="res://assets/character_portraits/demo_tecnico/LOBUKI DYB.PNG" id="3_8ldpm"]
[ext_resource type="Theme" uid="uid://ddn613eu7530y" path="res://assets/themes/title_theme.tres" id="3_tafmc"]
[ext_resource type="Theme" uid="uid://c0jwmjp4t5f8k" path="res://assets/themes/body_theme.tres" id="5_syajt"]

[sub_resource type="Animation" id="Animation_8ldpm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 88)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yejxv"]
resource_name = "appears_notification"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [Vector2(0, 88), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.34, 2.2, 3),
"transitions": PackedFloat32Array(0.466517, 1, 1, 0.466517),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"clear_self"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tafmc"]
_data = {
&"RESET": SubResource("Animation_8ldpm"),
&"appears_notification": SubResource("Animation_yejxv")
}

[node name="Notification" type="PanelContainer"]
modulate = Color(1, 1, 1, 0)
offset_right = 1004.0
offset_bottom = 389.0
theme = ExtResource("1_8ldpm")
script = ExtResource("2_8ldpm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_8ldpm")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NotificationTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_tafmc")
bbcode_enabled = true
text = "NOTIFICACION"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NotificationImage" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
texture = ExtResource("3_8ldpm")
expand_mode = 2
stretch_mode = 5

[node name="NotificationBody" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_syajt")
bbcode_enabled = true
text = "Una notificacion sobre un update de alguna quest"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tafmc")
}
autoplay = "appears_notification"
